Installing nuxt studio for interactive editing

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "build": "nuxt build --extends docus"
   },
   "dependencies": {
-    "docus": "latest",
     "better-sqlite3": "^12.5.0",
-    "nuxt": "^4.2.2"
+    "docus": "latest",
+    "nuxt": "^4.2.2",
+    "nuxt-studio": "^1.1.0"
   }
 }
